<resources>
    <string name="app_name">SGC</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="project_logo">Project logo</string>
    <string name="splash_image">splash_image</string>
    <string name="splash_title">Scan and Get Codes</string>
    <string name="copyright">Copyright@2018</string>
    <string name="generate_title">Generate</string>
    <string name="scan_title">Scan</string>
    <string name="scan_button">scan_button</string>
    <string name="plaintext_code">Plaintext Code</string>
    <string name="image_code">Image Code</string>
    <string name="audio_code">Audio Code</string>
    <string name="video_code">Video Code</string>
    <string name="browse">Browse</string>
    <string name="enter_text_to_generate">Enter Text to Generate</string>
    <string name="generate">Generate</string>
    <string name="todo">TODO</string>
    <string name="scan">SCAN</string>
    <string name="scan_plaintext">Scan Plaintext</string>
    <string name="scan_image">Scan Image</string>
    <string name="scan_audio">Scan Audio</string>
    <string name="scan_video">Scan Video</string>
    <string name="generate_image_qr_code">Generate Image QR Code</string>
    <string name="generate_audio_qr_code">Generate Audio QR Code</string>
    <string name="generate_video_qr_code">Generate Video QR Code</string>
    <string name="save">Save</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="qr_code_generator">QR Code Generator</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="help">Help</string>
    <string name="about_us">About us</string>
    <string name="help_and_support">Help and Support</string>
    <string name="create_account">Create Account</string>
    <string name="exit">Exit</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="title_activity_qrcode_generator">QR Code Generator</string>
    <string name="title_activity_qrcode_scanner">QR Code Scanner</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_aboutus">About us</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
</resources>
