<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    tools:context=".GenerateActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginBottom="200dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:textAppearanceMedium"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/plaintext_code"
        android:textStyle="bold"
        android:onClick="GeneratePlaintext"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:textAppearanceMedium"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/image_code"
        android:textStyle="bold"
        android:onClick="GenerateImage"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:textAppearanceMedium"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/audio_code"
        android:textStyle="bold"
        android:onClick="GenerateAudio"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:textAppearanceMedium"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/video_code"
        android:textStyle="bold"
        android:onClick="GenerateVideo"
        android:layout_marginTop="10dp"/>


</LinearLayout>