<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_list"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageButton
        android:id="@+id/generate"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/scan_button"
        app:srcCompat="@drawable/generate_small"
        android:background="@color/light_green"
        android:onClick="GenerateCode"
        />

    <TextView
        android:id="@+id/generate_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_title"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:onClick="GenerateCode"/>

    <ImageButton
        android:id="@+id/scan"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/scan_button"
        app:srcCompat="@drawable/scan_small"
        android:background="@color/light_green"
        android:layout_marginTop="20dp"
        android:onClick="scanCode"/>

    <TextView
        android:id="@+id/scan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_title"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:onClick="scanCode"/>
</LinearLayout>